Fix menu item visibility in the Library window

--- a/src/chrome/browser/places/organizer.css
+++ b/src/chrome/browser/places/organizer.css
@@ -64,6 +64,7 @@
 
 #placesMenu > menu[_moz-menuactive="true"] {
   background-color: transparent;
+  color: inherit;
 }
 
 #placesMenu > menu:hover {
